--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <textarea rows="9" cols="53" id="list" style="display: none">
-                馄饨 拉面 龍歌 小火锅 大火锅 自助餐 沙县小吃 羊肉汤 阿香米线 烤鱼 酱骨头 找新店 海鲜自助
+                馄饨 拉面 小火锅 大火锅 自助餐 沙县小吃 羊肉汤 米线 烤鱼 酱骨头 找新店 包子铺 麻辣烫 麻辣香锅 韩国料理 烤肉 饺子 土豆粉 
     </textarea>
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
